tests/paczka1/small_fuzzy/57239830.err
Error in line 5: PMwVyU A710 84,2
Error in line 2: gTpjaurkjP A710 26,6
